--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Each coordinate pair should be in separete lines, and in each line, X and Y shou
 
 (Copy-paste table from excel/csv to get input data in required format) . 
 
-Example of input Data: 
+Example of input data: 
 
 219615.6	158591
 240969.2	164777.6
